styles/styles.css
/* --- STYLES --- */
/* search for --- when lookin for specific sections. */

/* --- Colour theme --- */
/* 
background:  #edf2f4;
text:   #042D42;
title/highlight: #BA3F1D;
alt background:  #D9E4E8; #8D99AE;


/* --- Global//Reset Styles --- */

body, html {
    width: 100%;
    background-color: #F6F6F3;
    background-color: #edf2f4;
    color: rgb(67, 73, 77);
    color: #042D42;

}

/* Selection Styling */
::selection {
    background-color: #82D173;
}
/* box sizing border-box for all elements */
*,
*::before,
*::after{box-sizing:border-box;}

a{text-decoration:none; color:inherit; cursor:pointer;}
button{background-color:transparent; color:inherit; border-width:0; padding:0; cursor:pointer;}
figure{margin:0;}
input::-moz-focus-inner {border:0; padding:0; margin:0;}
ul, ol, dd{margin:0; padding:0; list-style:none;}
h1, h2, h3, h4, h5, h6{margin:0; font-size:inherit; font-weight:inherit;}
p{margin:0;}
cite {font-style:normal;}
fieldset{border-width:0; padding:0; margin:0;}

/* --- Typography ---*/

html{ 
    font-size: 1px;/*for using REM units*/
}
body{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    font-size: 15rem;
    font-weight: 400;
    line-height: 1.5;
}

body{
    font-family: 'Montserrat', sans-serif;
}

/* --- Main Styles --- */

h1, h2, h3 {
    margin-block-start: 0.83em;
    margin-block-end: 0.83em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;

}

.section {
    display: flex;
    justify-content: center;
    padding: 100px 170px;
}


@media screen and (max-width:1280px) {
	.section {
		padding: 100px;
	}
}

@media screen and (max-width:1024px) {
	.section {
		padding: 50px;
	}
}

@media screen and (max-width:768px) {
	.section {
		display: block;
	}
}

@media screen and (max-width:480px) {
	.section {
		padding: 50px 35px;
	}
}



.section-title {
	flex-shrink: 0;
	color: #BA3F1D;
	text-transform: uppercase;
	text-align: left;
	font-weight: 700;
    letter-spacing: 3px;
    font-size: 1.8em;
    margin-block-end: 1em;
}


@media screen and (max-width: 768px) {
    .section-title {
        width: auto;
    }
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.row-item {
    flex: 1 1 100px;
}

.row-item + .row-item {
    margin-left: 5%;
}

.row-item p {
    margin-top: 0px;
    margin-bottom: 25px;
}

/* --- Utilities --- */
a {
    -webkit-transition: all .2s ease-in-out;
	transition: all .2s ease-in-out;
	text-decoration: none;
	font-weight: 700;
	color: inherit
}

strong {
    font-weight: 700;
}

.emoji {
    display: inline-block;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
}

.button {
    display: inline-block;
    border: 1px solid #BA3F1D;
    padding: 0.75em 1em;
    border-radius: 0.33333em;
    text-decoration: none;
    color: #BA3F1D;
    
}

.button:hover {
    text-decoration:none;
    border:1px solid #F05D5E;
    color: #F05D5E;
    background-color: #E6EEF0;
}

/* Animated link on hover utility */
.section .underline-link {
	position: relative;
	display: inline-block
}

.section .underline-link:after {
	position: absolute;
	top: 100%;
	left: 0;
	width: 100%;
	height: 1px;
	background: #36363c;
	content: '';
	opacity: 0;
	-webkit-transition: height .3s,opacity .3s,-webkit-transform .3s;
	transition: height .3s,opacity .3s,-webkit-transform .3s;
	transition: height .3s,opacity .3s,transform .3s;
	transition: height .3s,opacity .3s,transform .3s,-webkit-transform .3s;
	-webkit-transform: translateY(-5px);
	transform: translateY(-5px)
}

.section .underline-link:focus:after,.section .underline-link:hover:after {
	height: 2px;
	border-radius: 3px;
	opacity: 1;
	-webkit-transform: translateY(-2px);
	transform: translateY(-2px)
}

/* --- Intro/Header ---*/

.intro {
   height: 100vh;
   display: flex;
   flex-direction: column;
   max-width: 1440px;
   padding: 120px 100px;
   margin: 0px auto;
   justify-content: space-around;
}

@media screen and (max-width: 768px){
    .intro {
        padding: 120px 70px;
    }
}

@media screen and (max-width: 560px) {
    .intro {
        padding: 120px 50px;
    }
}

@media screen and (max-width: 480px){
    .intro {
        padding: 70px 50px;
    }
}

.hello {
    font-weight: 500;
    font-size: 2em;
    font-size: 3em; /* 45px */
    font-family: 'Playfair Display', serif;
}

.wave {
    background-image: url(../img/Emojis/wave.png);
    margin-left: 15px;
    cursor: pointer;
    width: 40px;
    height: 40px;
}

.tagline {
    font-weight: 500;
    font-size: 1.3333em;
    font-size: 2.3333em; /* 35px */
    max-width: 800px;
    line-height: 1.8;
    margin-block-end: 0.2em;
}

@media screen and (max-width: 1024px){
    .hello {
        font-size: 2.75em;
    }
    .tagline {
        font-size: 2em;
    }
    .wave {
        width: 35px;
        height: 35px;
    }
}

@media screen and (max-width: 768px){
    .hello {
        font-size: 2.5em;
        margin-block-end: 0em;
    }
    .tagline {
        font-size: 1.75em;
    }
    .wave {
        width: 30px;
        height: 30px;
    }
}

@media screen and (max-width: 550px){
    .hello {
        font-size: 2.25em;
        margin-block-end: 0em;
    }
    .tagline {
        font-size: 1.5em;
        margin-block-start: 0em;
    }
    .wave {
        width: 28px;
        height: 28px;
    }
}

@media screen and (max-width: 360px){
    .hello {
        font-size: 2em;
        margin-block-end: 0em;
    }
    .tagline {
        font-size: 1.25em;
        margin-block-start: 0em;
    }
    .wave {
        width: 25px;
        height: 25px;
    }
}

@media screen and (max-width: 330px){
    .hello {
        font-size: 1.9em;
    }
    .tagline {
        font-size: 1.2em;
    }
}

.tagline .name {
    font-weight: 700;
}

.intro_links {
    font-weight: 400;
    font-size: 1.25em;
}

.call-me {
    background-image: url(../img/Emojis/callme.png);
    margin-left: 10px;
    vertical-align: sub;
    cursor: pointer;
    width: 35px;
    height: 35px;
}

@media screen and (max-width: 550px){
    .intro_links {
        font-size: 1em;
    }

    .call-me {
        width: 25px;
        height: 25px;
    }
}


/* --- About Me --- */

.about {
    flex-direction: column;
    background-color: #D9E4E8;
    padding: 100px 15%;
}

.about-row {
    flex-wrap: wrap-reverse;
}

.about-row p{
    font-size: 15rem;
}

.about-text{
    flex-grow: 10;
}

#profile-pic {
    max-width: 400px;
    height: auto;
}

@media screen and (max-width: 1280px){
    #profile-pic {
        max-width: 350px;
    }
}

@media screen and (max-width: 880px){
    #profile-pic {
        max-width: 325px;
    }
}

@media screen and (max-width: 768px){
    #profile-pic {
        clip-path: circle(30% at 38.5% 35%);
        /*clip-path: inset(80px 40px 120px 20px);*/
        max-width: 400px;
        display: block;
        margin-left: auto;
        margin-right: auto;
    }

    .about-row {
        flex-direction: column-reverse;
    }

    .about-row .row-item:last-child{
        margin-top: -10%;
        margin-bottom: -33%;
        margin-left: 15%;
        margin-right: 0%;
    }
}

@media screen and (max-width: 550px){
    .about-row .row-item:last-child{
        margin-bottom: -38%;
    }

    .about{
        padding: 70px 50px;
    }

    .about-text{
        max-width: 450px;
    }
}

@media screen and (max-width: 500px){
    .about-text{
        max-width: 375px;
    }
}

@media screen and (max-width: 425px){
    .about{
        padding: 50px 25px;
    }
    .about-text{
        max-width: 350px;
        font-size: 15rem;
    }

    #profile-pic {
        max-width: 375px;
        margin-left: 6%;
    }

    .about-row .row-item:last-child{
        margin-bottom: -45%;
    }
}

@media screen and (max-width: 375px){
    .about{
        padding: 50px 25px;
    }
    .about-text{
        max-width: 315px;
        font-size: 15rem;
    }

    #profile-pic {
        max-width: 325px;
        margin-left: 7%;
    }

    .about-row .row-item:last-child{
        margin-bottom: -45%;
    }
}

@media screen and (max-width: 320px){
    .about{
        padding: 50px 25px;
    }
    .about-text{
        max-width: 265px;
        font-size: 14rem;
    }

    #profile-pic {
        max-width: 270px;
        margin-left: 7%;
    }

    .about-row .row-item:last-child{
        margin-bottom: -45%;
    }
}

/* --- Skills --- */

.skills {
    flex-direction: column;
    padding: 100px 15%;
}

.skill-row {
    flex-direction: row;
    justify-content: space-between;
}

.skill-name {
    text-transform: uppercase;
	text-align: left;
	font-weight: 700;
    font-size: 1.2em;
}

/* --- Featured Projects ---*/

.featured-projects {
    flex-direction: column;
    padding: 100px 15%;
    background-color: #CFD4DE;
}
.featured-projects .project {
	display: flex;
	margin-bottom: 100px;
	width: 125%
}

@media screen and (max-width: 1280px){
    .featured-projects .project {
        width: 115%;
    }
}

@media screen and (max-width: 1024px){
    .featured-projects .project {
        width: 105%;
    }
}

@media screen and (max-width: 768px){
    .featured-projects .project {
        width: 100%;
        display: block;
        margin-bottom: 70px;
    }
}

.featured-projects .project-pic {
    max-width: 650px;
	overflow: visible;
	margin: 0
}

.featured-projects .project-pic a {
    display: block;
}

.featured-projects .project-pic img {
	width: 100%;
	max-width: 100%;
	vertical-align: bottom
}

.featured-projects .project-caption {
	width: 140px;
	flex-shrink: 0;
	margin-left: 30px
}

@media screen and (max-width:768px) {
	.featured-projects .project-caption {
		width: 100%;
		margin-top: 25px;
		margin-left: 0
	}
}

.featured-projects .project-name {
	margin-bottom: 15px
}

.featured-projects .project-name a {
	font-weight: 700
}

.featured-projects .project p {
	font-size: .9em;
	line-height: 1.5
}

/* --- Other Projects --- */
.other-projects {
    flex-direction: column;
    padding: 100px 15%;
}

.other-projects .project {
	max-width: 600px;
	margin-bottom: 50px
}

.other-projects .project-name {
	margin-bottom: 10px
}

.other-projects .project p {
	font-size: .9em;
	margin-bottom: 20px
}

.other-projects .project-skills-item {
	display: inline-block;
	margin: 3px 3px 3px 0;
	font-family: Inconsolata,monospace;
	font-size: .75em;
	font-weight: 700;
	padding: 2px 7px;
	border-radius: 3px;
	color: #BA3F1D;
	border: 1px solid #BA3F1D;
	background: 0 0
}

.other-projects .project-skills-item:first-of-type {
	margin-left: 0
}

/* --- Footer --- */

.footer {
	padding: 50px 80px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center
}

@media screen and (max-width:1024px) {
	.footer {
		padding: 50px
	}
}

@media screen and (max-width:630px) {
	.footer {
		display: block
	}
}

@media screen and (max-width:480px) {
	.footer {
		padding: 50px 30px
	}
}

.copyright {
	font-weight: 700;
	width: 200px
}

@media screen and (max-width:630px) {
	.copyright {
		width: auto;
		text-align: center;
		margin-bottom: 25px
	}
}

@media screen and (max-width:630px) {
	.copyright .bottom,.copyright .top {
		display: inline-block
	}
}

@media screen and (max-width:480px) {
	.copyright .bottom,.copyright .top {
		display: block
	}
}

@media screen and (max-width:630px) {
	.footer-links {
		display: -webkit-box;
		display: -ms-flexbox;
		display: flex;
		-webkit-box-pack: center;
		-ms-flex-pack: center;
		justify-content: center
	}
}

.footer-links a {
	position: relative;
	display: inline-block;
	/*color: #007bff!important;
	text-transform: uppercase;
	font-weight: 700;*/
	margin: 0 15px;
	outline: 0
}

@media screen and (max-width:1024px) {
	.footer-links a {
		margin: 0 10px
	}
}

.footer-links i {
	display: inline-block;
	width: 60px
}

